Cambios en edición
Modificaciones en estilos.

--- a/src/app/components/acerca-de/editinfopersonal.component.html
+++ b/src/app/components/acerca-de/editinfopersonal.component.html
@@ -1,8 +1,8 @@
 <!-- Formulario edición Información personal -->
-<div class="container-fluid">
+<div class="container-fluid imgfondo">
     <div class="container fondo shadow">
         <form (ngSubmit)="onUpdateInfopersonal()" novalidate #f="ngForm" class="p-4">
-            <div class="d-grid d-md-flex justify-content-md-end">
+            <div class="d-grid d-flex justify-content-end">
                 <button type="button" class="btn-close fs-5 me-md-2" aria-label="Close" routerLink="/"></button>
             </div>
             <h3>Datos Información personal</h3>
