--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -39,7 +39,7 @@
         <img class="banner" [src]="persona.urlbanner">
     </div>
     <!--Foto perfil-->
-    <img id="foto" alt="" class="img-fluid" [src]="persona.urlfoto">
+    <img id="foto" alt="" class="" [src]="persona.urlfoto">
 </header>
 
 <!-- Menu secundario -->
