--- a/src/app/components/proyecto/addproyecto.component.html
+++ b/src/app/components/proyecto/addproyecto.component.html
@@ -1,19 +1,19 @@
 <!-- Formulario Agregar Proyecto-->
 <div class="container-fluid imgfondo">
     <div class="container fondo shadow">
-        <form (ngSubmit)="onCreateProyecto()" novalidate #f="ngForm" class="p-4">
-            <div class="d-grid d-md-flex justify-content-md-end">
-                <button type="button" class="btn-close fs-5 me-md-2" aria-label="Close" routerLink="/"></button>
+        <form (ngSubmit)="onCreateProyecto()" novalidate #f="ngForm" class="p-lg-4 p-1">
+            <div class="d-grid d-flex justify-content-end">
+                <button type="button" class="btn-close fs-5" aria-label="Close" routerLink="/"></button>
             </div>
             <h3>Agregar Proyecto</h3>
-            <p style="margin-bottom: 24px; color: gray;" class="text-center">Todos los campos son obligatorios.
+            <p style="margin-bottom: 16px; color: gray;" class="text-center">Todos los campos son obligatorios.
             </p>
             <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre del Proyecto</label>
                 <input type="text" class="form-control p-2" id="nombre" name="nombre" 
                     [(ngModel)]="nombre" required>
             </div>
-            <div class="row">
+            <div class="row mb-0">
             <div class="col-6 mb-3">
                 <label for="enlace" class="form-label">Enlace al proyecto</label>
                 <input type="text" class="form-control p-2" id="enlace" name="enlace" placeholder="http://..."
@@ -25,7 +25,7 @@
                     [(ngModel)]="urlimagen" required>
             </div>
             </div>
-            <div class="row">
+            <div class="row mb-0">
                 <div class="col-6 mb-3">
                     <label for="fechainicio" class="form-label">Fecha de inicio</label>
                     <input class="form-control p-2" id="fechainicio" type="text" name="fechaincio"
@@ -44,7 +44,7 @@
                 </textarea>
                 <div id="descripcionformat" class="form-text">Max. 300 caracteres</div>
             </div>
-            <button type="submit" class="btn save d-block ms-auto mb-3">Agregar</button>
+            <button type="submit" class="btn save d-block ms-auto mb-2">Agregar</button>
         </form>
     </div>
 </div>
