--- a/src/app/components/skill/add/addhardskill.component.html
+++ b/src/app/components/skill/add/addhardskill.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid imgfondo">
     <div class="container fondo shadow">
         <form (ngSubmit)="onCreateHS()" novalidate #f="ngForm" class="p-4">
-            <div class="d-grid d-md-flex justify-content-md-end">
+            <div class="d-grid d-flex justify-content-end">
                 <button type="button" class="btn-close fs-5 me-md-2" aria-label="Close" routerLink="/"></button>
             </div>
             <h3>Agregar Hard Skill</h3>
