--- a/src/app/components/acerca-de/editacercade.component.html
+++ b/src/app/components/acerca-de/editacercade.component.html
@@ -1,8 +1,8 @@
 <!-- Formulario edición Acerca de -->
-<div class="container-fluid">
+<div class="container-fluid imgfondo">
     <div class="container fondo shadow">
         <form (ngSubmit)="onUpdateAcercade()" novalidate #f="ngForm" class="p-4">
-            <div class="d-grid d-md-flex justify-content-md-end">
+            <div class="d-grid d-flex justify-content-end">
                 <button type="button" class="btn-close fs-5 me-md-2" aria-label="Close" routerLink="/"></button>
             </div>
             <h3>Datos Acerca De</h3>
@@ -11,8 +11,8 @@
             <div class="row">
                 <div class="col-6 mb-3">
                     <label for="nombre" class="form-label">Nombre</label>
-                    <input type="text" class="form-control p-2" id="nombre" name="nombre" [(ngModel)]="persona.nombre"
-                        required aria-describedby="nombreformat">
+                    <input type="text" class="form-control p-2" id="nombre" name="nombre" 
+                        [(ngModel)]="persona.nombre" required aria-describedby="nombreformat">
                     <div id="nombreformat" class="form-text">Max. 10 caracteres</div>
                 </div>
                 <div class="col-6 mb-3">
