--- a/src/app/components/educacion/editeducacion.component.html
+++ b/src/app/components/educacion/editeducacion.component.html
@@ -1,36 +1,37 @@
 <!-- Formulario edición Educacion-->
-<div class="container-fluid">
+<div class="container-fluid imgfondo">
     <div class="container fondo shadow">
-        <form (ngSubmit)="onUpdateEducacion()" novalidate #f="ngForm" class="p-4">
-            <div class="d-grid d-md-flex justify-content-md-end">
+        <form (ngSubmit) = "onUpdateEducacion()" novalidate #f="ngForm" class="p-md-4 p-1">
+            <div class="d-grid d-flex justify-content-end">
                 <button type="button" class="btn-close fs-5 me-md-2" aria-label="Close" routerLink="/"></button>
             </div>
             <h3>Datos Educación</h3>
             <p style="margin-bottom: 24px; color: gray;" class="text-center">Completa los campos que deseas modificar.
             </p>
-            <div class="mb-4">
-                <label for="institucion" class="form-label">Institucion</label>
+            <div class="row">
+            <div class="col-6 col-md-12 mb-3">
+                <label for="institucion" class="form-label">Institución</label>
                 <input type="text" class="form-control p-2" id="institucion" name="institucion"
                     [(ngModel)]="educacion.institucion" required>
             </div>
-            <div class="row mb-3">
-                <div class="col-5 mb-3">
+            
+                <div class="col-6 col-md-5 mb-3">
                     <label for="carrera" class="form-label">Carrera</label>
                     <input type="text" class="form-control p-2" id="carrera" name="carrera"
                         [(ngModel)]="educacion.carrera" required>
                 </div>
-                <div class="col-5 mb-3">
-                    <label for="tituloobtenido" class="form-label">Titulo obtenido</label>
+                <div class="col-6 col-md-5 mb-3">
+                    <label for="tituloobtenido" class="form-label">Título</label>
                     <input type="text" class="form-control p-2" id="tituloobtenido" name="tituloobtenido"
                         [(ngModel)]="educacion.tituloobtenido" required>
                 </div>
-                <div class="col-2 mb-3">
-                    <label for="puntaje" class="form-label">Puntaje</label>
+                <div class="col-6 col-md-2 mb-3">
+                    <label for="puntaje" class="form-label">Promedio</label>
                     <input type="text" class="form-control p-2" id="puntaje" name="puntaje"
                         [(ngModel)]="educacion.puntaje" required>
                 </div>
             </div>
-            <div class="row mb-3">
+            <div class="row">
                 <div class="col-6 mb-3">
                     <label for="fechainicio" class="form-label">Fecha de inicio</label>
                     <input class="form-control p-2" id="fechainicio" type="text" name="fechaincio"
@@ -43,13 +44,13 @@
                     <div id="fechafinformat" class="form-text">Si estas cursando esta carrera escribe Actual</div>
                 </div>
             </div>
-            <div class="mb-4">
+            <div class="mb-3">
                 <label for="urllogoinst" class="form-label">Logo de la Institucion</label>
                 <input class="form-control p-2" id="urllogoinst" type="url" name="urllogoinst"
                     [(ngModel)]="educacion.urllogoinst" required aria-describedby="logoformat">
                 <div id="logoformat" class="form-text">URL de la imagen o gif</div>
             </div>
-            <button type="submit" class="btn save d-block ms-auto mb-3">Guardar</button>
+            <button type="submit" class="btn save d-block ms-auto mb-2">Guardar</button>
         </form>
     </div>
 </div>
