--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -18,12 +18,12 @@
                         &nbsp;<time>{{Experiencia.fechafin}}</time> </span>
                     <h3 class="title d-inline-block"> {{Experiencia.puesto}} </h3>
                     <!-- Botón edición Experiencia -->
-                    <button class="boton-edit" type="button" *ngIf="isLogged"
+                    <button class="boton-edit ps-lg-2 pe-lg-2" type="button" *ngIf="isLogged"
                         routerLink="/editExperiencia/{{Experiencia.id}}">
                         <i class="bi bi-pencil-square fs-5"></i>
                     </button>
                     <!-- Botón eliminar Experiencia -->
-                    <button class="boton-delete" type="button" *ngIf="isLogged"
+                    <button class="boton-delete ps-lg-2 pe-lg-2" type="button" *ngIf="isLogged"
                         (click)="deleteExperiencia(Experiencia.id)">
                         <i class="bi bi-x-square fs-5"></i>
                     </button>
