--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,24 +1,24 @@
-<section class="vh-100">
+<section class="v-100 imgfondo">
   <div class="container py-5 h-100">
     <div class="row d-flex align-items-center justify-content-center h-100">
-        <div class="d-grid d-md-flex justify-content-md-end">
+        <div class="d-grid d-flex justify-content-end">
             <button type="button" class="btn-close fs-5 me-md-2" aria-label="Close" routerLink="/"></button>
         </div>
       <div class="col-md-8 col-lg-7 col-xl-6">
         
         <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
-          class="img-fluid" alt="Phone image" style="background-color: blueviolet;" >
+          class="img-fluid" alt="Phone image">
           
       </div>
       
-      <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-        <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
-          <div class="mb-3">
+      <div class="col-md-10 col-lg-5 col-xl-5 offset-xl-1 logincontenedor shadow">
+        <form #f="ngForm" (ngSubmit)="onLogin()" novalidate style="width: 80%;" >
+          <div class="mb-xl-5 mb-2">
             <label for="nombreUsuario" class="form-label fs-5">Usuario</label>
             <input type="text" class="form-control p-2" id="nombreUsuario" name="nombreUsuario" [(ngModel)]="nombreUsuario" required>
         </div>
 
-        <div class="mb-3">
+        <div class="mb-xl-5 mb-2">
             <label for="password" class="form-label fs-5">Contraseña</label>
             <input type="password" class="form-control p-2" id="password" name="password" [(ngModel)]="password" required>
         </div>
