--- a/src/app/components/skill/add/addidioma.component.html
+++ b/src/app/components/skill/add/addidioma.component.html
@@ -1,14 +1,14 @@
 <!-- Formulario Agregar Idioma-->
 <div class="container-fluid imgfondo">
     <div class="container fondo shadow">
-        <form (ngSubmit)="onCreateIdioma()" novalidate #f="ngForm" class="p-4">
-            <div class="d-grid d-md-flex justify-content-md-end">
+        <form (ngSubmit)="onCreateIdioma()" novalidate #f="ngForm" class="p-lg-4 p-1">
+            <div class="d-grid d-flex justify-content-end">
                 <button type="button" class="btn-close fs-5 me-md-2" aria-label="Close" routerLink="/"></button>
             </div>
             <h3>Agregar Idioma</h3>
             <p style="margin-bottom: 24px; color: gray;" class="text-center">Todos los campos son obligatorios.
             </p>
-            <div class="mb-4">
+            <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre del idioma</label>
                 <input type="text" class="form-control p-2" id="nombre" name="nombre" 
                     [(ngModel)]="nombre" required>
@@ -31,7 +31,7 @@
                     [(ngModel)]="oralidad" required aria-describedby="textformat">
                 <div id="textformat" class="form-text">nativo, principiante, intermedio, avanzado</div>
             </div>
-            <button type="submit" class="btn save d-block ms-auto mb-3">Agregar</button>
+            <button type="submit" class="btn save d-block ms-auto mb-2">Agregar</button>
         </form>
     </div>
 </div>
