--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -14,8 +14,7 @@
             <span class="icon"><img class="logo" [src]="Experiencia.urllogocomp" alt="Logo de la empresa" /></span>
             <div class="timeline-content">
                 <div class="content-inner">
-                    <span class="year"> <time>{{Experiencia.fechainicio}}</time>&nbsp; -
-                        &nbsp;<time>{{Experiencia.fechafin}}</time> </span>
+                    <span class="year"> <time>{{Experiencia.fechainicio}}</time>&nbsp; - &nbsp;<time>{{Experiencia.fechafin}}</time> </span>
                     <h3 class="title d-inline-block"> {{Experiencia.puesto}} </h3>
                     <!-- Botón edición Experiencia -->
                     <button class="boton-edit ps-lg-2 pe-lg-2" type="button" *ngIf="isLogged"
