--- a/src/app/components/header/editheader.component.html
+++ b/src/app/components/header/editheader.component.html
@@ -8,27 +8,25 @@
             <h3>Datos Header</h3>
             <p style="margin-bottom: 24px; color: gray;" class="text-center">Completa los campos que deseas modificar.
             </p>
-
             <div class="row">
-            <div class="col-md-6 col-xl-12 mb-3">
-                <label for="urlbanner" class="form-label">Url Banner</label>
-                <input type="url" class="form-control p-lg-2" id="urlbanner" name="urlbanner"
-                    [(ngModel)]="persona.urlbanner" required aria-describedby="bannerformat">
-                <div id="bannerformat" class="form-text">URL de la imagen o gif</div>
-            </div>
-            
-            <div class="col-md-6 col-xl-12 mb-3">
-                <label for="urlfoto" class="form-label">Url Foto</label>
-                <input type="url" class="form-control p-lg-2" id="urlfoto" name="urlfoto" [(ngModel)]="persona.urlfoto"
-                    required aria-describedby="fotoformat">
-                <div id="fotoformat" class="form-text">URL de la imagen</div>
-            </div>
+                <div class="col-md-6 col-xl-12 mb-3">
+                    <label for="urlbanner" class="form-label">Url Banner</label>
+                    <input type="url" class="form-control p-lg-2" id="urlbanner" name="urlbanner"
+                        [(ngModel)]="persona.urlbanner" required aria-describedby="bannerformat">
+                    <div id="bannerformat" class="form-text">URL de la imagen o gif</div>
+                </div>
+                <div class="col-md-6 col-xl-12 mb-3">
+                    <label for="urlfoto" class="form-label">Url Foto</label>
+                    <input type="url" class="form-control p-lg-2" id="urlfoto" name="urlfoto"
+                        [(ngModel)]="persona.urlfoto" required aria-describedby="fotoformat">
+                    <div id="fotoformat" class="form-text">URL de la imagen</div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-6 mb-3">
                     <label for="nombre" class="form-label">Nombre</label>
-                    <input type="text" class="form-control p-lg-2" id="nombre" name="nombre" [(ngModel)]="persona.nombre"
-                        required aria-describedby="nombreformat">
+                    <input type="text" class="form-control p-lg-2" id="nombre" name="nombre"
+                        [(ngModel)]="persona.nombre" required aria-describedby="nombreformat">
                     <div id="nombreformat" class="form-text">Max. 10 caracteres</div>
                 </div>
                 <div class="col-6 mb-3">
