--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -29,6 +29,7 @@
             <button class="btn login p-2 fs-5" type="button" (click)="login()" *ngIf="!isLogged">
                 Login
             </button>
+            <!--Botón Logout-->
             <button class="btn login p-2 fs-5" type="button" (click)="onLogOut()" *ngIf="isLogged">
                 Logout
             </button>
